--- a/k8smvndeployment.yaml
+++ b/k8smvndeployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: test
     spec:
       containers:
-      - name: test container
+      - name: test_container
         image: murali90102/test
         ports:
         - containerPort: 8081
