--- a/k8smvndeployment.yaml
+++ b/k8smvndeployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: test
     spec:
       containers:
-      - name: test_container
+      - name: test-container
         image: murali90102/test
         ports:
         - containerPort: 8081
@@ -32,6 +32,6 @@ spec:
 
   type: NodePort
   ports:
-  - nodePort: 31000
+  - nodePort: 31001
     port: 8081
     targetPort: 8081
